[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Enemy_State_Machine.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 2.0

[sub_resource type="SphereShape" id=3]
radius = 4.6

[sub_resource type="CapsuleShape" id=4]
height = 2.0

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 0.1, 1 )

[sub_resource type="CubeMesh" id=6]

[node name="Enemy" type="KinematicBody" groups=["Enemy"]]
script = ExtResource( 1 )

[node name="FX" type="MeshInstance" parent="."]
transform = Transform( -1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, -0.1, 2, 1.3113e-06 )
mesh = SubResource( 1 )
material/0 = null

[node name="Vision" type="Area" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.0999973, 2, -25.2 )
collision_layer = 7
collision_mask = 7
priority = 1.0

[node name="CollisionPolygon" type="CollisionPolygon" parent="Vision"]
transform = Transform( 1, -8.74228e-08, -8.74228e-08, 6.77527e-07, -3.38763e-07, 7.75, -8.74228e-08, -1, -4.37114e-08, -4.32134e-07, 0.2, -4.95767 )
polygon = PoolVector2Array( 15, -25, -15, -25, 0, 10 )

[node name="AttackRadius" type="Area" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.0999992, 2, -5.6 )
collision_layer = 7
collision_mask = 7

[node name="CollisionShape" type="CollisionShape" parent="AttackRadius"]
shape = SubResource( 3 )

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( -1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, -0.1, 2, 1.3113e-06 )
shape = SubResource( 4 )

[node name="Feet" type="CollisionShape" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.1, 0.2, 1.3113e-06 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
autostart = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -0.1, 0, 8.74228e-08, 0, 0.1, 0, -8.74227e-09, 0, -1, -0.1, 2, -2 )
mesh = SubResource( 6 )
material/0 = null

[node name="EnemyInTrueVision" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.6, 0 )
enabled = true
cast_to = Vector3( 0, 0, -10000 )
collision_mask = 3

[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
[connection signal="body_exited" from="AttackRadius" to="." method="_on_AttackRadius_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
